Improve usertask endpoint API